# hue-effects-gui

./: README.md  package-lock.json  package.json  vite.config.js
src/: App.jsx  main.jsx  style.css  utils.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: big_array.rs  commands.rs  commands_bridge.rs  convert_color_to_rgb.rs  entertainment_config.rs  main.rs  message.rs  shader.rs  state_structs.rs  util.rs
src/components/: Bridges.jsx  Device.jsx  Devices.jsx  Effects.jsx  RoomPreview.jsx  Sidebar2.jsx  exampleArea.js
src/components/Effects/: RainbowControls.jsx  SolidControls.jsx
src/components/css/: Device.css  Devices.css  sidebar.css  style copy.css
src/components/old/: App.css  Sidebar.jsx
