[package]
name = "tauri-test-2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.1", features = ["api-all"] }
tauri-plugin-window-state = "0.1.0"
reqwest = { version = "0.11.13" }
# webrtc = "0.6.0"
# rustls = "0.20.7"
# webpki-roots = "0.22.5"
# tokio-dtls-stream-sink = "0.5.0"
tokio = { version = "1.23.0", features = [
    "time",
    "macros",
    "io-util",
    "rt-multi-thread",
] }
webrtc = "0.6.0"
# clap = "3.2.6"
hex = "0.4.3"
bincode = "1.3.3"
colorsys = "0.6.6"
mdns-sd = "0.5.10"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
